org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/CircleInheritanceInCircleImport.alf.xt
/* 
XPECT_SETUP org.omg.sysml.xpect.tests.validation.SysMLValidationTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/

// XPECT noErrors ---> ""
package test{
	class A{
		import test::B::*;
		class a specializes b{}
	}
	class B {
		import test::A::*;
		class b specializes a{}
	}
}
