org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/failing/SimpleImportTests_DoubleImportInHierarchy.alf.xt
//* 
XPECT_SETUP org.omg.sysml.xpect.tests.testsuite.SysMLXtextTest
	ResourceSet {
		ThisFile {}
		File {from ="/library/Base.alf"}
	}
	Workspace {
		JavaProject {
			SrcFolder {
				ThisFile {}
				File {from ="/library/Base.alf"}
			}
		}
	}
END_SETUP 
*/

// XPECT noErrors ---> ""
package test{
	class A{
		import test::*;
		class b{
			import A::*;
			//xpect throws RuntimeError class name and its specializes are the same. so no scope or linking test at d
			//* XPECT scope at d ---
			   
			 --- */
		   //XPECT linkedName at d --> test.A.b.d
			class d specializes d{}
		}
	}
}
